--- a/style.css
+++ b/style.css
@@ -103,3 +103,26 @@ header ul li a {
     letter-spacing: 1px;
     text-decoration: none;
 }
+
+.content .imgBox {
+    position: relative;
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content .imgBox::before {
+    content: '';
+    position: absolute;
+    width: 350px;
+    height: 350px;
+    background: var(--green);
+    border-radius: 50%;
+}
+
+.content .imgBox img {
+    position: relative;
+    max-width: 350px;
+    z-index: 1;
+}
